Added image handling with s3
